Fixed box shadows

--- a/index.html
+++ b/index.html
@@ -60,9 +60,7 @@
 				<input type="email" class="ask-field" id="field-email" placeholder="Enter your email" required>
 				<button type="submit" id="button-ask" class="btn--orange pull-right">Ask</button>
 				<div class="indicator text--green">
-					<div class="light--green">
-						
-					</div>
+					<div class="light--green"></div>
 					<p>Darrell is in and answering questions now!</p>
 				</div>
 			</form>
